fix: overflow 제거

--- a/src/TableClothLite/Pages/Home.razor.css
+++ b/src/TableClothLite/Pages/Home.razor.css
@@ -10,16 +10,7 @@
     flex-wrap: nowrap;
     margin-bottom: 16px;
     z-index: 10;
-}
-.scroll-nav::before {
-    content: "";
-    width: 100vw;
-    height: calc(100% - 1px);
     border-bottom: 1px solid var(--neutral-foreground-active);
-    position: absolute;
-    top: 0;
-    left: calc(50% - 50vw);
-    z-index: 0;
     background-color: var(--foreground-on-accent-rest);
 }
 .scroll-nav .scroll-anchor {
